<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineProvider="none"
    tools:context=".AddLutemonActivity"
    android:background="#17000000">

    <RadioGroup
        android:id="@+id/rgColorSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valkoinen" />

        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vihrea" />

        <RadioButton
            android:id="@+id/rbPink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pinkki" />

        <RadioButton
            android:id="@+id/rbOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oranssi" />

        <RadioButton
            android:id="@+id/rbBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musta" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtNameInput"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:hint="@string/kirjoita_lutemonin_nimi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgColorSelection"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/btCreateLutemon"
        android:layout_width="208dp"
        android:layout_height="78dp"
        android:backgroundTint="#FFB74D"
        android:onClick="addLutemon"
        android:text="@string/luo_uusi_lutemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameInput"
        app:layout_constraintVertical_bias="0.041" />
</androidx.constraintlayout.widget.ConstraintLayout>