<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17000000"
    tools:context=".MoveLutemonActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMoveList"
        android:layout_width="410dp"
        android:layout_height="392dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <RadioGroup
        android:id="@+id/rgDestination"
        android:layout_width="159dp"
        android:layout_height="149dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvMoveList">

        <RadioButton
            android:id="@+id/rbToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kotiin" />

        <RadioButton
            android:id="@+id/rbToTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harjoitusalueelle" />

        <RadioButton
            android:id="@+id/rbToBattlefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taistelemaan" />
    </RadioGroup>

    <Button
        android:id="@+id/btnMove"
        android:layout_width="172dp"
        android:layout_height="91dp"
        android:backgroundTint="#FFB74D"
        android:text="@string/siirra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgDestination"
        app:layout_constraintVertical_bias="0.223" />
</androidx.constraintlayout.widget.ConstraintLayout>