<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity"
    android:background="#17000000">

    <Button
        android:id="@+id/btnToArena"
        android:layout_width="238dp"
        android:layout_height="76dp"
        android:backgroundTint="#FFB74D"
        android:onClick="switchToBattlefield"
        android:text="@string/taisteluareenalle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMove"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/btnAddLutemon"
        android:layout_width="238dp"
        android:layout_height="76dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#FFB74D"
        android:onClick="switchToAddLutemon"
        android:text="@string/lisaa_uusi_lutemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="238dp"
        android:layout_height="76dp"
        android:backgroundTint="#FFB74D"
        android:onClick="switchToLutemonList"
        android:text="@string/listaa_lutemonit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddLutemon"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/btnMove"
        android:layout_width="238dp"
        android:layout_height="76dp"
        android:backgroundTint="#FFB74D"
        android:onClick="switchToMoveLutemon"
        android:text="@string/siirra_lutemoneja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnList"
        app:layout_constraintVertical_bias="0.098" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnAddLutemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>